--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
                     <ul>
                         <li><a href="https://twitter.com/losinqdogs">Twitter</a></li>
-                        <li><a href="losinqdogs.tumblr.com">Tumblr</a></li>
+                        <li><a href="https://losinqdogs.tumblr.com">Tumblr</a></li>
                     </ul>
 
                     <figure><img src="images/GXUITLJXsAAFxt5.jpg" alt="Page from a sketchbook showing"></figure>
