--- a/about.html
+++ b/about.html
@@ -3,13 +3,22 @@
 
 <head>
     <title>ABOUT</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="/styles/site.css">
+
 </head>
 
 <body>
     <header>
         <nav>
-            <ul>
+            <div class="menubar">
+                <picture>
+                    <img src="/images/pfpsquare.jpg" alt="profile picture drawn by me">
+                </picture>
+                <button id="hamMenu">&#8801;</button>
+            </div>
+
+            <ul class="menufull">
                 <li><a href="/index.html">HOME</a></li>
                 <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="/selectedworks.html">SELECTED WORKS</a></li>
@@ -33,7 +42,7 @@
 
                     <ul>
                         <li><a href="https://twitter.com/losinqdogs">Twitter</a></li>
-                        <li><a href="https://losinqdogs.tumblr.com">Tumblr</a></li>
+                        <li><a href="losinqdogs.tumblr.com">Tumblr</a></li>
                     </ul>
 
                     <figure><img src="images/GXUITLJXsAAFxt5.jpg" alt="Page from a sketchbook showing"></figure>
@@ -43,53 +52,53 @@
             <div class="right-column">
                 <!-- ORIGINAL CONTENT: PEN FANG-->
 
-                    <div class="poem-title">
-                        <h3>GRIEF (A HOLE IN THE EARTH)</h3>
-                    </div>
-                    <article class="poem-body">
-                        <p>the keurig hums to life</p>
-                        <p>drip drop, the sound of your heart</p>
-                        <p>splattering against the floor</p>
-                        <p>crimson, purple caressing your knees</p>
-                        <p>now you’re alone running circles around</p>
-                        <p> the hole in the earth</p>
-                        <p>like clockwork, like crochet, stitch after stitch</p>
-                        <p> your footsteps pitter-patter in loops</p>
-                        <p> drip drop</p>
+                <div class="poem-title">
+                    <h3>GRIEF (A HOLE IN THE EARTH)</h3>
+                </div>
+                <article class="poem-body">
+                    <p>the keurig hums to life</p>
+                    <p>drip drop, the sound of your heart</p>
+                    <p>splattering against the floor</p>
+                    <p>crimson, purple caressing your knees</p>
+                    <p>now you’re alone running circles around</p>
+                    <p> the hole in the earth</p>
+                    <p>like clockwork, like crochet, stitch after stitch</p>
+                    <p> your footsteps pitter-patter in loops</p>
+                    <p> drip drop</p>
 
-                        <p>flower field parting in cyclical motion</p>
-                        <p>orbit of absence</p>
-                        <p>there’s a hole in the earth</p>
-                        <p>that you can’t avoid, won’t avoid, circle like water</p>
-                        <p>down the drain</p>
-                        <p>these bruises will fade</p>
-                        <p>and when the pain stops cutting knife-hot</p>
-                        <p>splintering your chest</p>
-                        <p>then what will you have left?</p>
+                    <p>flower field parting in cyclical motion</p>
+                    <p>orbit of absence</p>
+                    <p>there’s a hole in the earth</p>
+                    <p>that you can’t avoid, won’t avoid, circle like water</p>
+                    <p>down the drain</p>
+                    <p>these bruises will fade</p>
+                    <p>and when the pain stops cutting knife-hot</p>
+                    <p>splintering your chest</p>
+                    <p>then what will you have left?</p>
 
-                        <p>ashes to ashes and dust to dust</p>
-                        <p>you’re running in circles around a hole in the earth</p>
+                    <p>ashes to ashes and dust to dust</p>
+                    <p>you’re running in circles around a hole in the earth</p>
 
-                        <p>i think i’ve forgotten how to be</p>
-                        <p>without you by my side</p>
-                        <p>so your chest kisses the dirt like a lover</p>
-                        <p>lying spread eagle next to the hole in the earth</p>
-                        <p>home in the earth</p>
+                    <p>i think i’ve forgotten how to be</p>
+                    <p>without you by my side</p>
+                    <p>so your chest kisses the dirt like a lover</p>
+                    <p>lying spread eagle next to the hole in the earth</p>
+                    <p>home in the earth</p>
 
-                        <p>everything goes</p>
-                        <p>your sun the moon sealed in a silent tomb</p>
-                        <p>silent prayer called grief</p>
-                        <p>the artist’s grave of permanence</p>
-                        <p>i’ll never get you back i’ll never see you again</p>
-                        <p>you don’t know what to do anymore</p>
-                        <p>so you’re tracing circles around a hole in the earth</p>
-                        <p>with your footprints over and over and over</p>
-                        <p>your knees against the grass</p>
-                        <p>purple. green. white knuckled fists</p>
-                        <p>begging, begging
+                    <p>everything goes</p>
+                    <p>your sun the moon sealed in a silent tomb</p>
+                    <p>silent prayer called grief</p>
+                    <p>the artist’s grave of permanence</p>
+                    <p>i’ll never get you back i’ll never see you again</p>
+                    <p>you don’t know what to do anymore</p>
+                    <p>so you’re tracing circles around a hole in the earth</p>
+                    <p>with your footprints over and over and over</p>
+                    <p>your knees against the grass</p>
+                    <p>purple. green. white knuckled fists</p>
+                    <p>begging, begging
 
-                    </article>
-                
+                </article>
+
             </div>
         </div>
     </section>
@@ -114,6 +123,107 @@
 
     </section>
 
+    <section>
+        <!-- ORIGINAL CONTENT: PEN FANG-->
+        <div class="cent">
+            <h2>SOME RECENT POETRY SNIPPETS (THAT I DON'T KNOW WHAT TO DO WITH)</h2>
+        </div>
+        <div class="cent">
+            <p>For the record, I currently love Anne Carson, Ada Limon, Ocean Vuong, and Richard Siken</p>
+        </div>
+
+
+        <div class="threes">
+            <div class="poem-3">
+                <article class="poem">
+                    <div class="cent">
+                        <h6>scrap i</h6>
+                    </div>
+                    <p>i dream about you: red teeth sinking into my skin</p>
+                    <p>holy ritual violence pressing the tips of my fingers</p>
+                    <p>together clasped under my chin the sting of sin</p>
+                    <p>of prayer of shame waiting to unfurl from my mouth</p>
+
+                    <p>sometimes i think cutting open</p>
+                    <p>the skin in front of my heart</p>
+                    <p>like curtains shrinking away to</p>
+                    <p>let the light in, let the light out</p>
+                    <p>would let me out, finally</p>
+                    <p>longing spilling forth with my</p>
+                    <p>body split open in desire</p>
+                    <p>white bones curving in surrender</p>
+                </article>
+            </div>
+
+            <div class="poem-3">
+                <article class="poem">
+                    <div class="cent">
+                        <h6>scrap ii</h6>
+                    </div>
+
+                    <p>the piano i’ve eavesdropped</p>
+                    <p>on like a shame-buried secret</p>
+                    <p>ends and i can’t quite force myself</p>
+                    <p>to sleep when i’m this sad</p>
+                    <p>waiting for the ache to leave</p>
+                    <p>but what will i be without its violence?</p>
+                    <p>one morning this sadness will fossilize</p>
+                    <p>on the discman whirring and whirring</p>
+                    <p>the batteries died in a week so</p>
+                    <p>i recharged them and kept going</p>
+                    <p>does it ever get tired of spinning round</p>
+                    <p>and round the way i do</p>
+                    <p>the voices from the hall</p>
+                    <p>a door opens. a door closes. i’m lying</p>
+                    <p>awake with the hollow silence</p>
+                    <p>my watch ticking the seconds of my life</p>
+                    <p>away my roommate asleep in the</p>
+                    <p>blanket of quiet dark we lay ourselves</p>
+                    <p>under every night twist the lock shut</p>
+                    <p>i read once a creative spark is called</p>
+                    <p>a spark because it suffocates you</p>
+                    <p>if you can’t free it fast enough carve</p>
+                    <p>a space in your chest for it to break away</p>
+                    <p>i think it’s a spark because it eats you up</p>
+                    <p>from the inside until there’s nothing left</p>
+                    <p>i don’t have anything left in me</p>
+                    <p>except empty organs programmed to</p>
+                    <p>continue on and on do you think</p>
+                    <p>my lungs ever get tired of moving? of being</p>
+                    <p>unable to stop the inhale-exhale-inhale-exhale</p>
+                    <p>i wanted to be free i want it to be free</p>
+                    <p>wishing i could find the knife blade lodged</p>
+                    <p>chest deep by another hand so i could</p>
+                    <p>pull it out like a confession and bleed</p>
+                </article>
+            </div>
+            <div class="poem-3">
+                <article class="poem">
+                    <div class="cent">
+                        <h6>scrap iii</h6>
+                    </div>
+                    <p>i’m lying through my teeth when i</p>
+                    <p>beg my best friend to live through this night</p>
+                    <p>last night, tomorrow night, it’ll get better</p>
+                    <p> lies, lies, lies you told me over the phone</p>
+                    <p>you’re lying to me and i knew in my chest</p>
+                    <p>that you caught me but i had to stomach</p>
+                    <p>the blow and pray you’d put the knife down</p>
+                    <p>with your chest still intact</p>
+                    <p>a blunt edge and bruised flesh</p>
+                    <p>the tomato juice runs like ink down your fingers</p>
+                    <p>seeds waiting for a bloom that never comes</p>
+                    <p>there’s a hole in your chest that spells out grief</p>
+                    <p>spells out a list of names you keep losing</p>
+                    <p>the two headed god the only one you loved</p>
+                    <p>a girl a boy a graveyard i’m sorry i’m sorry</p>
+                    <p>useless noise ripples like pebbles skipping</p>
+                    <p>across soft water again and again</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <ul>
             <li><a href="https://twitter.com/losinqdogs">Twitter</a></li>
@@ -122,5 +232,8 @@
             <li>© 2025 Pen Fang </li>
         </ul>
     </footer>
+
+    <script src="/scripts/jquery-3.7.1.js"></script>
+    <script src="/scripts/hamburger.js"></script>
 
 </body>
