--- a/graphics.html
+++ b/graphics.html
@@ -3,13 +3,23 @@
 
 <head>
     <title>GRAPHICS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/styles/site.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <ul>
+            <div class="menubar">
+                <picture>
+                    <img src="/images/pfpsquare.jpg" alt="profile picture drawn by me">
+                </picture>
+                <button id="hamMenu">
+                    &#8801;
+                </button>
+            </div>
+
+            <ul class="menufull">
                 <li><a href="/index.html">HOME</a></li>
                 <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="/selectedworks.html">SELECTED WORKS</a></li>
@@ -26,25 +36,42 @@
             <h1>GRAPHICS</h1>
         </div>
         <blockquote>Here is a collection of various graphics and social media posts I have made.</blockquote>
+    </section>
+
+  
+
+
 
         <section class="graphics">
+
+
+
+
+
+
             <div class="g-top-bar">
                 <h2>Cornell E.Motion</h2>
             </div>
             <p>Cornell University's only K-Pop focused dance club. As part of design team, I make graphics, thumbnails, logos for the end of year showcase, and more.</p>
             <div class="graph-row graph-row-2">
-                <div class="graphic">
+                <div class="graphic" id="modalEmotionTent">
                     <figure><img src="/images/emotiontentative.png" alt="Logo design for Cornell E.Motion"></figure>
                 </div>
                 <div class="graphic">
                     <figure><img src="/images/eboard1.png" alt="Instagram introduction post graphic"></figure>
                 </div>
+
+
             </div>
+
 
         </section>
 
+
+
         <section class="graphics">
             <!-- ORIGINAL CONTENT: PEN FANG-->
+
             <div class="g-top-bar">
                 <h2>Williamsville East Unity in Diversity</h2>
             </div>
@@ -146,4 +173,7 @@
         </ul>
     </footer>
 
+    <script src="/scripts/jquery-3.7.1.js"></script>
+    <script src="/scripts/hamburger.js"></script>
+    <script src="/scripts/modal.js"></script>
 </body>
