--- a/selectedworks.html
+++ b/selectedworks.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>SELECTED WORKS</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="/styles/site.css">
 </head>
 
@@ -10,12 +11,22 @@
 
     <header>
         <nav>
-            <ul>
+            <div class="menubar">
+                <picture>
+                    <img src="/images/pfpsquare.jpg" alt="profile picture drawn by me">
+                </picture>
+                <button id="hamMenu">
+                    &#8801;
+                </button>
+            </div>
+
+            <ul class="menufull">
                 <li><a href="/index.html">HOME</a></li>
                 <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="/selectedworks.html">SELECTED WORKS</a></li>
                 <li><a href="/graphics.html">GRAPHICS</a></li>
                 <li><a href="/fullport.html">FULL PORTFOLIO</a></li>
+
             </ul>
         </nav>
 
@@ -378,5 +389,8 @@
             <li>© 2025 Pen Fang </li>
         </ul>
     </footer>
+
+    <script src="/scripts/jquery-3.7.1.js"></script>
+    <script src="/scripts/hamburger.js"></script>
 
 </body>
