--- a/graphics.html
+++ b/graphics.html
@@ -39,26 +39,60 @@
     </section>
 
   
+    <section class="graphics">
 
+        <div class="g-top-bar">
+            <h2>Cornell YDSA</h2>
+        </div>
+        <p>Cornell chapter of the Young Democratic Socialists of America. Fighting for a better world. Instagram: @cornellydsa.</p>
+        <div class="graph-row graph-row-3">
+            <div class="graphic">
+                <figure><img src="/images/1.png" alt="Hannah4Ithaca post"></figure>
+            </div>
+            <div class="graphic">
+                <figure><img src="/images/2.png" alt="Hannah4Ithaca post"></figure>
+            </div>
+            <div class="graphic">
+                <figure><img src="/images/3.png" alt="Hannah4Ithaca post"></figure>
+            </div>
+
+        </div>
+
+        <div class="graph-row graph-row-4">
+            <div class="graphic">
+                <figure><img src="/images/artbuildsdasd.png" alt="Cornell YDSA post"></figure>
+            </div>
+            <div class="graphic">
+                <figure><img src="/images/HannahOnTheBallot.png" alt="Hannah4Ithaca post"></figure>
+            </div>
+            <div class="graphic">
+                <figure><img src="/images/fkdjgksdjg.png" alt="Cornell YDSA G-body post"></figure>
+            </div>
+            <div class="graphic">
+                <figure><img src="/images/buttonmaking.png" alt="Cornell YDSA G-body post"></figure>
+            </div>
+
+        </div>
+
+
+    </section>
 
 
         <section class="graphics">
 
-
-
-
-
-
             <div class="g-top-bar">
                 <h2>Cornell E.Motion</h2>
             </div>
-            <p>Cornell University's only K-Pop focused dance club. As part of design team, I make graphics, thumbnails, logos for the end of year showcase, and more.</p>
-            <div class="graph-row graph-row-2">
+            <p>Cornell University's only K-Pop focused dance club. As part of design team, I make graphics, thumbnails, logos for the end of year showcase, and more. Instagram: @cornellemotion</p>
+            <div class="graph-row graph-row-3">
                 <div class="graphic" id="modalEmotionTent">
                     <figure><img src="/images/emotiontentative.png" alt="Logo design for Cornell E.Motion"></figure>
                 </div>
                 <div class="graphic">
                     <figure><img src="/images/eboard1.png" alt="Instagram introduction post graphic"></figure>
+                </div>
+                <div class="graphic">
+                    <figure><img src="images/asjdksjdks.png" alt="Sticker graphic"></figure>
                 </div>
 
 
