--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                 <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="/selectedworks.html">SELECTED WORKS</a></li>
                 <li><a href="/graphics.html">GRAPHICS</a></li>
-                <li><a href="/fullport.html">FULL PORTFOLIO</a></li>
+                <li><a href="/otherworks.html">OTHER WORKS</a></li>
             </ul>
         </nav>
     </header>
