--- a/otherworks.html
+++ b/otherworks.html
@@ -98,10 +98,8 @@
         </div>
     </div>
 
-    <div class="fp-row fp-row-3">
-        <div class="fp">
-            <figure><img src="/images/magspreads.jpg" alt="8 mixed media zine pages. Title page: dissonance. Explores themes of a split self and an attempt at reunion and rebirth."></figure>
-        </div>
+    <div class="fp-row fp-row-2">
+        
         <div class="fp">
             <figure><img src="/images/poisonlover.jpg" alt="Acrylic portrait of two girls with skeletons behind them. Broken glass surrounds one of the girls. Prison bars in the back. Everything burns. Roses, bound wrists, burning nets."></figure>
         </div>
@@ -109,6 +107,12 @@
             <figure><img src="/images/digitaltouch.jpg" alt="Mixed-media painting of a room with two girls embracing at the center on a mattress on the floor. One girl has wires intertwined with her body, linking to the image of a girl and her phone beneath."></figure>
         </div>
 
+    </div>
+
+    <div class="fp-row">
+        <div class="fp">
+            <figure><img src="/images/magspreads.jpg" alt="8 mixed media zine pages. Title page: dissonance. Explores themes of a split self and an attempt at reunion and rebirth."></figure>
+        </div>
     </div>
 
     <div class="fp-row fp-row-2">
