--- a/about.html
+++ b/about.html
@@ -3,27 +3,18 @@
 
 <head>
     <title>ABOUT</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="/styles/site.css">
-
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="menubar">
-                <picture>
-                    <img src="/images/pfpsquare.jpg" alt="profile picture drawn by me">
-                </picture>
-                <button id="hamMenu">&#8801;</button>
-            </div>
-
-            <ul class="menufull">
+            <ul>
                 <li><a href="/index.html">HOME</a></li>
                 <li><a href="/about.html">ABOUT</a></li>
                 <li><a href="/selectedworks.html">SELECTED WORKS</a></li>
                 <li><a href="/graphics.html">GRAPHICS</a></li>
-                <li><a href="/otherworks.html">OTHER WORKS</a></li>
+                <li><a href="/fullport.html">FULL PORTFOLIO</a></li>
             </ul>
         </nav>
     </header>
@@ -36,7 +27,7 @@
         <div class="about-box">
             <div class="left-column">
                 <div class="text-box">
-                    <p>Hello! My name is Pen Fang, and I am a student at Cornell University studying art history and information science. I love art and media and creation, and I am trying to put more creation into my daily life. Some current areas of interest in my studies are: gender and sexuality studies, Greek tragedy, contemporary art, surrealism, film history, networks and algorithms.</p>
+                    <p>Hello! My name is Pen Fang, and I am a student at Cornell University studying art history and mathematics. I love art and media and creation, and I am trying to put more creation into my daily life. Some current areas of interest in my studies are: contemporary art from a anticolonial and transnational transtemporal perspective, lesbianism and transgenderism, anarchism, embodiment, surrealism, Grek tragedy, and more (lol). I'm all over the place a bit at the moment.</p>
 
                     <p>Here are other places you can find me on the Internet:</p>
 
@@ -52,53 +43,53 @@
             <div class="right-column">
                 <!-- ORIGINAL CONTENT: PEN FANG-->
 
-                <div class="poem-title">
-                    <h3>GRIEF (A HOLE IN THE EARTH)</h3>
-                </div>
-                <article class="poem-body">
-                    <p>the keurig hums to life</p>
-                    <p>drip drop, the sound of your heart</p>
-                    <p>splattering against the floor</p>
-                    <p>crimson, purple caressing your knees</p>
-                    <p>now you’re alone running circles around</p>
-                    <p> the hole in the earth</p>
-                    <p>like clockwork, like crochet, stitch after stitch</p>
-                    <p> your footsteps pitter-patter in loops</p>
-                    <p> drip drop</p>
+                    <div class="poem-title">
+                        <h3>GRIEF (A HOLE IN THE EARTH)</h3>
+                    </div>
+                    <article class="poem-body">
+                        <p>the keurig hums to life</p>
+                        <p>drip drop, the sound of your heart</p>
+                        <p>splattering against the floor</p>
+                        <p>crimson, purple caressing your knees</p>
+                        <p>now you’re alone running circles around</p>
+                        <p> the hole in the earth</p>
+                        <p>like clockwork, like crochet, stitch after stitch</p>
+                        <p> your footsteps pitter-patter in loops</p>
+                        <p> drip drop</p>
 
-                    <p>flower field parting in cyclical motion</p>
-                    <p>orbit of absence</p>
-                    <p>there’s a hole in the earth</p>
-                    <p>that you can’t avoid, won’t avoid, circle like water</p>
-                    <p>down the drain</p>
-                    <p>these bruises will fade</p>
-                    <p>and when the pain stops cutting knife-hot</p>
-                    <p>splintering your chest</p>
-                    <p>then what will you have left?</p>
+                        <p>flower field parting in cyclical motion</p>
+                        <p>orbit of absence</p>
+                        <p>there’s a hole in the earth</p>
+                        <p>that you can’t avoid, won’t avoid, circle like water</p>
+                        <p>down the drain</p>
+                        <p>these bruises will fade</p>
+                        <p>and when the pain stops cutting knife-hot</p>
+                        <p>splintering your chest</p>
+                        <p>then what will you have left?</p>
 
-                    <p>ashes to ashes and dust to dust</p>
-                    <p>you’re running in circles around a hole in the earth</p>
+                        <p>ashes to ashes and dust to dust</p>
+                        <p>you’re running in circles around a hole in the earth</p>
 
-                    <p>i think i’ve forgotten how to be</p>
-                    <p>without you by my side</p>
-                    <p>so your chest kisses the dirt like a lover</p>
-                    <p>lying spread eagle next to the hole in the earth</p>
-                    <p>home in the earth</p>
+                        <p>i think i’ve forgotten how to be</p>
+                        <p>without you by my side</p>
+                        <p>so your chest kisses the dirt like a lover</p>
+                        <p>lying spread eagle next to the hole in the earth</p>
+                        <p>home in the earth</p>
 
-                    <p>everything goes</p>
-                    <p>your sun the moon sealed in a silent tomb</p>
-                    <p>silent prayer called grief</p>
-                    <p>the artist’s grave of permanence</p>
-                    <p>i’ll never get you back i’ll never see you again</p>
-                    <p>you don’t know what to do anymore</p>
-                    <p>so you’re tracing circles around a hole in the earth</p>
-                    <p>with your footprints over and over and over</p>
-                    <p>your knees against the grass</p>
-                    <p>purple. green. white knuckled fists</p>
-                    <p>begging, begging
+                        <p>everything goes</p>
+                        <p>your sun the moon sealed in a silent tomb</p>
+                        <p>silent prayer called grief</p>
+                        <p>the artist’s grave of permanence</p>
+                        <p>i’ll never get you back i’ll never see you again</p>
+                        <p>you don’t know what to do anymore</p>
+                        <p>so you’re tracing circles around a hole in the earth</p>
+                        <p>with your footprints over and over and over</p>
+                        <p>your knees against the grass</p>
+                        <p>purple. green. white knuckled fists</p>
+                        <p>begging, begging
 
-                </article>
-
+                    </article>
+                
             </div>
         </div>
     </section>
@@ -110,9 +101,7 @@
         </div>
         <div class="about-box">
             <div class="left-column">
-                <p>I am currently a college student and work on graphics for various clubs, including Cornell E.Motion and Cornell YDSA. I am working on making postcards and cards to send back to my hometown. My short-term goals including making more political art, and as always, trying to figure out what art means to me. My long-term plan is to paint another mural over the summer if I have the means, and synthesize my studies with creating art.</p>
-
-                <p>Here is a sketch/study I have done recently. I really wanted to capture the emotions. I wanted my art to be something more than just a pretty picture or a copy. Of course, I'm not sure where I am in terms of that, but I am going to keep experimenting until I find out. I'm trying to be more hybrid and physical with my creation, tying art with writing and more. My most recent sketchbook escapades include using dirt and water to paint a piece and a study in crayon.</p>
+                <p>I am currently a college student and work on graphics for various clubs, including Cornell E.Motion and Cornell YDSA. I am working on making postcards and cards to send back to my hometown.</p>
 
 
             </div>
@@ -129,7 +118,7 @@
             <h2>SOME RECENT POETRY SNIPPETS (THAT I DON'T KNOW WHAT TO DO WITH)</h2>
         </div>
         <div class="cent">
-            <p>For the record, I currently love Anne Carson, Ada Limon, Ocean Vuong, and Richard Siken</p>
+            <p>For the record, I love Anne Carson, Ada Limon, Ocean Vuong, and Richard Siken</p>
         </div>
 
 
@@ -232,8 +221,5 @@
             <li>© 2025 Pen Fang </li>
         </ul>
     </footer>
-
-    <script src="/scripts/jquery-3.7.1.js"></script>
-    <script src="/scripts/hamburger.js"></script>
 
 </body>
