--- a/otherworks.html
+++ b/otherworks.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>ABOUT</title>
+    <title>OTHER WORKS</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="/styles/site.css">
 
