--- a/graphics.html
+++ b/graphics.html
@@ -35,7 +35,7 @@
         <div class="cent title-cent">
             <h1>GRAPHICS</h1>
         </div>
-        <blockquote>Here is a collection of various graphics and social media posts I have made.</blockquote>
+        <blockquote>Various graphics and social media posts I have made.</blockquote>
     </section>
 
   
@@ -109,7 +109,7 @@
             <div class="g-top-bar">
                 <h2>Williamsville East Unity in Diversity</h2>
             </div>
-            <p>The club at my high school, Williamsville East, dedicated to putting on a show consisting of cultural performances. As president, I made Instagram posts, program pages, and the special 30th anniversary logo.</p>
+        
             <div class="graph-row graph-row-3">
                 <div class="graphic">
                     <figure><img src="/images/unityig1.png" alt="Magazine-themed Instagram post advertising Unity in Diversity's first meeting."></figure>
@@ -165,7 +165,7 @@
             <div class="g-top-bar">
                 <h2>The East Side News</h2>
             </div>
-            <p>The newspaper of my high school, Williamsville East. I would make posters and menus for the community events we hosted.</p>
+           
             <div class="graph-row graph-row-4">
                 <div class="graphic">
                     <figure><img src="/images/esnfinalmenu....png" alt="Poster advertising the June 2024 East Side News Coffeehouse"></figure>
@@ -187,7 +187,7 @@
         <section class="graphics">
             <!-- ORIGINAL CONTENT: PEN FANG-->
             <div class="g-top-bar">
-                <h2>MISC</h2>
+                <h2>Miscellaneous</h2>
             </div>
             <div class="graph-row graph-row-1">
                 <div class="graphic">
@@ -200,8 +200,6 @@
 
     <footer>
         <ul>
-            <li><a href="https://twitter.com/losinqdogs">Twitter</a></li>
-            <li><a href="https://losinqdogs.tumblr.com">Tumblr</a></li>
             <li><a href="mailto:artingpen@gmail.com">Contact Me</a></li>
             <li>© 2025 Pen Fang </li>
         </ul>
