--- a/about.html
+++ b/about.html
@@ -128,4 +128,8 @@
         </ul>
     </footer>
 
+        <script src="/scripts/jquery-3.7.1.js"></script>
+    <script src="/scripts/hamburger.js"></script>
+
+
 </body>
