--- a/graphics.html
+++ b/graphics.html
@@ -66,7 +66,7 @@
                 <figure><img src="/images/HannahOnTheBallot.png" alt="Hannah4Ithaca post"></figure>
             </div>
             <div class="graphic">
-                <figure><img src="/images/fkdjgksdjg.png" alt="Cornell YDSA G-body post"></figure>
+                <figure><img src="/images/rhs.png" alt="red hot summer post draft"></figure>
             </div>
             <div class="graphic">
                 <figure><img src="/images/buttonmaking.png" alt="Cornell YDSA G-body post"></figure>
