--- a/graphics.html
+++ b/graphics.html
@@ -60,7 +60,7 @@
 
         <div class="graph-row graph-row-4">
             <div class="graphic">
-                <figure><img src="/images/artbuildsdasd.png" alt="Cornell YDSA post"></figure>
+                <figure><img src="/images/committeeswithgcal.jpeg" alt="Cornell YDSA post"></figure>
             </div>
             <div class="graphic">
                 <figure><img src="/images/HannahOnTheBallot.png" alt="Hannah4Ithaca post"></figure>
@@ -83,7 +83,7 @@
             <div class="g-top-bar">
                 <h2>Cornell E.Motion</h2>
             </div>
-            <p>Cornell University's only K-Pop focused dance club. As part of design team, I make graphics, thumbnails, logos for the end of year showcase, and more. Instagram: @cornellemotion</p>
+            <p>Instagram: @cornellemotion</p>
             <div class="graph-row graph-row-3">
                 <div class="graphic" id="modalEmotionTent">
                     <figure><img src="/images/emotiontentative.png" alt="Logo design for Cornell E.Motion"></figure>
