--- a/otherworks.html
+++ b/otherworks.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="cent">
-            <p>Other artworks including fanart.</p>
+            <p>Miscellaneous artworks</p>
         </div>
 
     <div class="fp-row fp-row-3">
