--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <blockquote class="home-bq">
             <!-- Source: From the song "Ptolomea" by Ethel Cain. Youtube link to the song: https://youtu.be/-VmFiiDedU0 -->
-            "Even the iron still fears the rot." - Ethel Cain
+            they/them | student
         </blockquote>
 
         <div class="bar">
@@ -60,7 +60,7 @@
                 <figure><img src="/images/mc.jpg" alt="Collage acrylic painting. Portrait of a person in a rearview mirror with text that reads &quot;Objects of desire are closer than they appear&quot;. Foam flowers are glued to the top of the canvas. Parts of the canvas are cut out in the shape of a person with scenes layered over them. A closed box extends from the bottom right corner."></figure>
 
             </div>
-            <p>My personal favorites & the processes that made them. <a href="/selectedworks.html">(View more.)</a></p>
+            <p>My personal favorites <a href="/selectedworks.html">(View more.)</a></p>
         </div>
 
         <div class="bar-top">
@@ -74,7 +74,7 @@
                 <figure><img src="/images/unityig1.png" alt="Magazine-themed Instagram post advertising Unity in Diversity's first meeting."></figure>
                 <figure><img src="/images/vietnam.png" alt="Unity in Diversity 2024 Vietnam program page design"></figure>
             </div>
-            <p>Social media posts, flyers, posters, etc. <a href="/graphics.html">(View more.)</a></p>
+            <p>Social media posts, flyers, posters, etc <a href="/graphics.html">(View more.)</a></p>
         </div>
 
         <div class="bar">
