--- a/otherworks.html
+++ b/otherworks.html
@@ -38,10 +38,10 @@
             <p>Miscellaneous artworks</p>
         </div>
 
-    <div class="fp-row fp-row-3">
-        <div class="fp">
+    <div class="fp-row fp-row-2">
+       <!-- <div class="fp">
             <figure><img src="/images/colorstudy.png" alt="Fanart of Lestat de Lioncourt from AMC's Interview With the Vampire"></figure>
-        </div>
+        </div> -->
         <div class="fp">
             <figure><img src="/images/ateezcoachella.png" alt="Fanart of Hongjoong of ATEEZ at 2024 Coachella"></figure>
         </div>
@@ -49,30 +49,30 @@
             <figure><img src="/images/birth.png" alt="Fanart of Kim Lip and Heejin of LOONA"></figure>
         </div>
     </div>
-    <div class="fp-row fp-row-3">
+    <div class="fp-row fp-row-2">
         <div class="fp">
             <figure><img src="/images/comic2.png" alt="Fanart of Karina and Ningning of AESPA"></figure>
         </div>
-        <div class="fp">
+       <!-- <div class="fp">
             <figure><img src="/images/iwtv1.png" alt="Fanart of Claudia and Lestat de Lioncourt from AMC's Interview With the Vampire"></figure>
-        </div>
+        </div> -->
         <div class="fp">
             <figure><img src="/images/iwtv2.png" alt="Fanart of Louis de Pointe du Lac and Lestat de Lioncourt from AMC's Interview With the Vampire"></figure>
         </div>
     </div>
-    <div class="fp-row fp-row-4">
+    <div class="fp-row fp-row-2">
         <div class="fp">
             <figure><img src="/images/jonghyun.png" alt="Fanart of Jonghyun of SHINEE"></figure>
         </div>
         <div class="fp">
             <figure><img src="/images/kimlip.png" alt="Fanart of Kim Lip of LOONA in the ARTMS Birth MV"></figure>
         </div>
-        <div class="fp">
+       <!-- <div class="fp">
             <figure><img src="/images/taemin2.png" alt="Fanart of Taemin of SHINEE in his Sexy in the Air MV"></figure>
         </div>
         <div class="fp">
             <figure><img src="/images/taemin3.png" alt="Fanart of Taemin of SHINEE from his Ephemeral Gaze tour"></figure>
-        </div>
+        </div> -->
     </div>
     <div class="fp-row fp-row-4">
         <div class="fp">
