--- a/otherworks.html
+++ b/otherworks.html
@@ -53,12 +53,16 @@
         <div class="fp">
             <figure><img src="/images/comic2.png" alt="Fanart of Karina and Ningning of AESPA"></figure>
         </div>
+
+        <div class="fp">
+            <figure><img src="/images/250612-protected-intensity-DEFAULT-V2.png" alt="fanart"></figure>
+        </div>
        <!-- <div class="fp">
             <figure><img src="/images/iwtv1.png" alt="Fanart of Claudia and Lestat de Lioncourt from AMC's Interview With the Vampire"></figure>
-        </div> -->
+        </div>
         <div class="fp">
             <figure><img src="/images/iwtv2.png" alt="Fanart of Louis de Pointe du Lac and Lestat de Lioncourt from AMC's Interview With the Vampire"></figure>
-        </div>
+        </div> -->
     </div>
     <div class="fp-row fp-row-2">
         <div class="fp">
