--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
             <figure class="pfp"><img src="/images/pfpsquare.jpg" alt="Drawing of me done by me using ashes and water"></figure>
             <h1>PEN FANG</h1>
         </div>
-        <blockquote class="home-bq">
-            <!-- Source: From the song "Ptolomea" by Ethel Cain. Youtube link to the song: https://youtu.be/-VmFiiDedU0 -->
+    <!--    <blockquote class="home-bq">
+            <!-- Source: From the song "Ptolomea" by Ethel Cain. Youtube link to the song: https://youtu.be/-VmFiiDedU0 
             they/them | student
-        </blockquote>
+        </blockquote> 
+    -->
 
         <div class="bar">
             <h2 class="text"><a href="/about.html">ABOUT ME</a></h2>
