updates, fix main nav

--- a/index.html
+++ b/index.html
@@ -78,9 +78,18 @@
             <p>Social media posts, flyers, posters, etc <a href="/graphics.html">(View more.)</a></p>
         </div>
 
-        <div class="bar">
-            <h2 class="text"><a href="/fullport.html">VIEW ALL WORKS</a></h2>
+        <div class="bar-top">
+            <h2 class="text"><a href="/fullport.html">OTHER WORKS</a></h2>
             <h2 class="x">X</h2>
+        </div>
+        <div class="bar-body">
+
+            <div class="photoset">
+                <figure><img src="/images/250612-protected-intensity-DEFAULT-V2.png" alt="Fanart depicting a woman"></figure>
+                <figure><img src="/images/various_kitsch.png" alt="Magazine cover with an apocalypse theme"></figure>
+                <figure><img src="/images/birth.png" alt="Fanart depicting two women"></figure>
+            </div>
+            <p>Miscellaneous other works <a href="/otherworks.html">(View more.)</a></p>
         </div>
     </section>
 
