--- a/graphics.html
+++ b/graphics.html
@@ -58,12 +58,9 @@
 
         </div>
 
-        <div class="graph-row graph-row-4">
+        <div class="graph-row graph-row-3">
             <div class="graphic">
-                <figure><img src="/images/committeeswithgcal.jpeg" alt="Cornell YDSA post"></figure>
-            </div>
-            <div class="graphic">
-                <figure><img src="/images/HannahOnTheBallot.png" alt="Hannah4Ithaca post"></figure>
+                <figure><img src="/images/socc2.png" alt="Event post"></figure>
             </div>
             <div class="graphic">
                 <figure><img src="/images/rhs.png" alt="red hot summer post draft"></figure>
@@ -71,6 +68,18 @@
             <div class="graphic">
                 <figure><img src="/images/buttonmaking.png" alt="Cornell YDSA G-body post"></figure>
             </div>
+
+        </div>
+
+        <div class="graph-row graph-row-2">
+            <div class="graphic">
+                <figure><img src="/images/YDSAclubfestzine.png" alt="Cornell YDSA zine"></figure>
+            </div>
+
+            <div class="graphic">
+                <figure><img src="/images/committeeswithgcal.jpeg" alt="Cornell YDSA post"></figure>
+            </div>
+            
 
         </div>
 
@@ -84,6 +93,7 @@
                 <h2>Cornell E.Motion</h2>
             </div>
             <p>Instagram: @cornellemotion</p>
+        
             <div class="graph-row graph-row-3">
                 <div class="graphic" id="modalEmotionTent">
                     <figure><img src="/images/emotiontentative.png" alt="Logo design for Cornell E.Motion"></figure>
@@ -96,6 +106,20 @@
                 </div>
 
 
+            </div>
+
+            <div class="graph-row graph-row-4">
+            <div class="graphic">
+                <figure><img src="/images/qc1.png" alt="Quartercard design"></figure>
+            </div>
+            <div class="graphic">
+                <figure><img src="/images/qc2.png" alt="Quartercard design"></figure>
+            </div>
+            <div class="graphic">
+                <figure><img src="/images/qc3.png" alt="Quartercard design"></figure>
+            </div>
+            <div class="graphic">
+                <figure><img src="/images/qc4.png" alt="Quartercard design"></figure>
             </div>
 
 
