--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <div class="bar-top">
-            <h2 class="text"><a href="/fullport.html">OTHER WORKS</a></h2>
+            <h2 class="text"><a href="/otherworks.html">OTHER WORKS</a></h2>
             <h2 class="x">X</h2>
         </div>
         <div class="bar-body">
