fix images on index

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
             <div class="photoset">
                 <figure><img src="/images/emotiontentative.png" alt="Logo design for Cornell E.Motion"></figure>
-                <figure><img src="/images/unityig1.png" alt="Magazine-themed Instagram post advertising Unity in Diversity's first meeting."></figure>
-                <figure><img src="/images/vietnam.png" alt="Unity in Diversity 2024 Vietnam program page design"></figure>
+                <figure><img src="/images/rhs.png" alt="Unused YDSA post"></figure>
+                <figure><img src="/images/qc2.png" alt="Cornell Emotion quartercard"></figure>
             </div>
             <p>Social media posts, flyers, posters, etc <a href="/graphics.html">(View more.)</a></p>
         </div>
